# blinx

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notes.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-docs.yaml
blinx/: __init__.py  constants.py  estimate.py  extract.py  fluorescence_model.py  hyper_parameters.py  markov_chain.py  optimizer.py  parameter_ranges.py  parameters.py  post_process.py  trace_model.py  utils.py
docs/source/: api.rst  conf.py  extract_traces.rst  index.rst  install.rst  quickstart.rst
procode/: __init__.py  fluorescence_model.py  protein_db.py  sequence.py
promap/: __init__.py  amino_acids.py  constants.py  estimate.py  extract.py  fit.py  fit_params.py  fluorescence_model.py  hyper_parameters.py  markov_chain.py  optimizer.py  parameter_ranges.py  parameters.py  post_process.py  trace_model.py  transition_matrix.py  transition_matrix_v3.py  utils.py
promap/protein_model/: __init__.py  amino_acids.py  fluorescence_model.py  protein_db.py  sequence.py
scripts/: extract_trace_ex.py  grad_nan_ex.py  run_promap.py  sigma_grad_nan.py  trace_fitting_ex.py
scripts/examples/: drift.txt
tests/: benchmarking.py  conftest.py  consistancy_test.py  consistency_test.py  fit_module_tests.py  fluorescence_model_tests.py  prediction_consistancy.py  test_consistancy.py  test_discritized_trace.py  test_estimate.py  test_find_local_maxima.py  test_fit_module.py  test_markov_chain.py  test_parameter_ranges.py  test_priors.py  test_trace_model.py  test_transition_matrix.py  trace.npy  trace_model_tests.py  transition_matrix_tests.py
