# https://peps.python.org/pep-0517/
# https://hatch.pypa.io/latest/config/build/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "promap"
description = "Counting of binding sites in fluorescence traces"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = 'Jan Funke', email = 'funkej@janelia.hhmi.org' },
    { name = 'Alex Hillsley', email = 'hillsleya@janelia.hhmi.org' },
]
dynamic = ["version"]
dependencies = ["numpy", "scipy", "jax", "scikit-image"]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "pytest-cov", "ruff", "twine", "build"]
test = ["pytest", "pytest-cov"]

[project.urls]
homepage = "https://github.com/funkelab/promap"

# https://hatch.pypa.io/latest/version/
[tool.hatch.version]
path = "promap/__init__.py"

# https://beta.ruff.rs/docs
[tool.ruff]
target-version = "py38"
src = ["promap"]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff specific rules
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: ${PY_MAJOR_VERSION} no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.mypy]
files = "promap"
strict = false
allow_untyped_defs = true
# allow_untyped_calls = true
disallow_any_generics = false
ignore_missing_imports = true
